<resources>
    <string name="app_name">Henge Stoners</string>
    <string name="button_addhillfort"> Add HillFort</string>
    <string name="button_updatehillfort">Update HillFort</string>
    <string name="hint_hillFortTitle"> Hill Fort Title</string>
    <string name="hint_hillFortDescription">Description </string>
    <string name="hint_hillFortLat">Lat</string>
    <string name="hint_hillFortLong">Long</string>
    <string name="hint_hillFortVisited">Visited</string>
    <string name="hint_hillFortPublic">Public</string>
    <string name="hint_dateVisited">Date Visited YYYY-MM-DD</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_images">Images</string>
    <string name="hillFortAddNote">Add Note</string>
    <string name="menu_addHillFort">Add</string>
    <string name="menu_cancelHillFort">Cancel</string>
    <string name="title_warning">Please Enter Title</string>
    <string name="note_warning">Please Enter Note</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_removeImage"> Delete Image </string>
    <string name="select_hillFort_image"> Select HillFort Image</string>
    <string name="button_removehillfort"> DELETE HILLFORT</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="empty_latlong">lat = 52.245690, long = -7.139102</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="reg_uname">User Name</string>
    <string name="loader_text">Henge Stoners</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="settings_updateUser">Update Details</string>
    <string name="settings_email">Email</string>
    <string name="settings_userName">User Name</string>
    <string name="settings_password">Password</string>
    <string name="settings_updatePassword">Update Password</string>
    <string name="settings_oldPassword">Current Password</string>
    <string name="settings_newPassword">New Password</string>
    <string name="stats_statsTitle">Stats</string>
    <string name="visitedDisplay">Visited</string>
    <string name="isPublicDisplay">Public</string>
    <string name="settings_deleteAccount">Delete Account</string>
    <string name="title_activity_henge_stone_maps">Map of all HengeStones</string>
    <string name="nav_maps">Maps</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_local_placeholder">Hillfort Location</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="hillfort_rating_placeholder">Rating</string>
    <string name="hillfort_action_button">Rate</string>
    <string name="hillfort_copy_button">Copy</string>
    <string name="hillfort_favourite_button">Favourite</string>
    <string name="hillfort_user_placeholder">User</string>
    <string name="mapview_switch">All Hillforts</string>
    <string name="rating_popup_submit">Submit</string>
    <string name="rating_popup_cancel">Cancel</string>
    <string name="search_title">Title</string>
    <string name="search_rating_max">Rating Max</string>
    <string name="search_rating_min">Rating Min</string>
    <string name="search_lat_max">Lat Max</string>
    <string name="search_lat_min">Lat Min</string>
    <string name="search_long_max">Long Max</string>
    <string name="search_long_min">Long Min</string>
    <string name="search_button">Search</string>
    <string name="clear_button">Clear</string>
</resources>

