<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:titleTextColor="@color/colorPrimary"
        tools:layout_editor_absoluteX="-3dp" />

    <Button
        android:id="@+id/HomeButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/nav_home"
        app:layout_constraintBottom_toBottomOf="@+id/SettingsButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nav_settings"
        app:layout_constraintBottom_toBottomOf="@+id/MapsActivityButton"
        app:layout_constraintStart_toEndOf="@+id/HomeButton" />

    <Button
        android:id="@+id/MapsActivityButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nav_maps"
        app:layout_constraintBottom_toBottomOf="@+id/LogOutButton"
        app:layout_constraintStart_toEndOf="@+id/SettingsButton" />

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nav_logout"
        app:layout_constraintStart_toEndOf="@+id/MapsActivityButton"
        app:layout_constraintTop_toTopOf="@+id/navToolBar" />

</androidx.constraintlayout.widget.ConstraintLayout>